# aip

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 07dc3c2e6fa3_add_agent_config_and_knowledge_base.py  1445a327746e_removed_some_columns.py  25129a93a26c_recreate_user_agent_and_organization_.py  277ad1b4ebda_add_agent_config_and_knowledge_base.py  33d64f972624_removed_some_columns.py  42e48779880a_add_organization_auto_creation.py  4f9acca3524e_add_users_and_agents_tables.py  852a7eec665a_initial_migration.py  c9075b2aa8ad_recreate_user_agent_and_organization_.py  cbe74bb3bd4d_updated_table_schema.py  e205ae0e06b4_removed_some_columns.py  f7f6d7395f38_add_some_columns.py
backend/app/: main.py
backend/app/core/: __init__.py  background_task.py  config.py  dasboard_ws.py  exceptions.py  file_processing.py  llm.py  pdf_utils.py  performance_middleware.py  responses.py  security.py  speech_to_text.py  url_processing.py  vector_store.py  websocket_manager.py  youtube_processer.py  youtube_processor.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  agent.py  analytics.py  chat.py  dashboard_analytics.py  knowledge.py  knowledge_base.py  organization.py  performance.py  user.py  widget.py
backend/app/db/repository/: agent.py  chat.py  dashboard.py  knowledge.py  user.py  (+3 more)
backend/app/dependencies/: auth.py
backend/app/models/: agent.py  chat.py  knowledge.py  knowledge_base.py  organization.py  user.py  widget.py
backend/app/routes/: app_routers.py
backend/app/schemas_old/: agent.py  organization.py  user.py
backend/app/services/: analytics_services.py  chat_services.py  dashboard_analytics.py  dashboard_events.py  dashboard_ws.py  knowledge_service.py  knowledge_services.py  llm_services.py  monitoring.py  performance_services.py  widget_services.py
backend/app/services_old/: auth_service.py  user_service.py
backend/app/test/: test_user.py
(+55 files in other folders)
