[project]
name = "aip"
version = "0.1.0"
description = ""
authors = [
    {name = "HamayounBhatti",email = "88651217+HamayounBhatti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "ecdsa (>=0.19.0,<0.20.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "idna (>=3.10,<4.0)",
    "mako (>=1.3.9,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic-core (>=2.29.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rsa (>=4.9,<5.0)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "websockets (>=15.0,<16.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain (>=0.3.20,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-core (>=0.3.41,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "pypdf (>=5.3.1,<6.0.0)",
    "chromadb (>=0.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
